# Griply

./: .gitignore  README.md  nixpacks.toml  railway.json
.github/: README.md
.github/workflows/: daily-price-sync.yml
Backend/: .env.example  README.md  pyproject.toml  requirements.txt
Backend/app/: main.py
Backend/app/core/: config.py  database.py  middleware.py  scheduler.py
Backend/app/features/analytics/: schemas.py  service.py
Backend/app/features/auth/: deps.py  models.py  router.py
Backend/app/features/bills/: models.py
Backend/app/features/forecasting/: service.py
Backend/app/features/notifications/: router.py  schemas.py  service.py
Backend/app/features/sync/: router.py  service.py
Backend/app/features/wealth/: models.py  router.py  schemas.py  service.py
Backend/app/utils/: finance_utils.py
Frontend/: .env.example  index.html  package.json
Frontend/src/: App.tsx  index.css
Frontend/src/pages/: AddEntry.tsx  Analytics.tsx  Categories.tsx  Dashboard.tsx  Goals.tsx  Login.tsx  More.tsx  Privacy.tsx  Sync.tsx  Tags.tsx  Terms.tsx  Transactions.tsx  Wealth.tsx
vercelDeployable/: .vercelignore  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
vercelDeployable/api/: main.py  pyproject.toml.backup  requirements.txt
vercelDeployable/api/app/: main.py
vercelDeployable/public/: manifest.json
vercelDeployable/src/: App.tsx
vercelDeployable/src/lib/: api.ts  store.ts
vercelDeployable/src/pages/: AddEntry.tsx  Analytics.tsx  Categories.tsx  Dashboard.tsx  Goals.tsx  Login.tsx  More.tsx  Privacy.tsx  (+5 more)
(+94 files in other folders)
